--- a/examples/Untitled.ipynb
+++ b/examples/Untitled.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# $$ \\sqrt{a+b} $$"
+    "## $$ \\sqrt{a+b} $$"
    ]
   },
   {
