--- a/examples/mck.ipynb
+++ b/examples/mck.ipynb
@@ -52,19 +52,19 @@
     "  \\right]\n",
     "$\n",
     ",\n",
-    "$ C= \\left[1 ,0 \\right] $\n",
+    "$ \\mathbf{u}_{t}= \\left[0 ,f \\right]^{T} $\n",
     ",\n",
-    "$ \\mathbf{u}_{t}= \\left[0 ,f \\right]^{T} $\n"
+    "$ C= \\left[1 ,0 \\right] $\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "## "
+   ]
   }
  ],
  "metadata": {
