update sample program

--- a/examples/mdk.ipynb
+++ b/examples/mdk.ipynb
@@ -10,14 +10,14 @@
     "\n",
     "質量M,ダンパ係数C,弾性係数Kの運動方程式は以下のようになる\n",
     "\n",
-    "$$ M \\frac{d^{2}x}{dt^{2}} + D \\frac{dx}{dt} + K x = f(t)  $$\n"
+    "$$ M \\frac{d^{2}x}{dt^{2}} + C \\frac{dx}{dt} + K x = f(t)  $$\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![mdk](images/mdk.gif)"
+    "![mck](images/mck.gif)"
    ]
   },
   {
@@ -26,7 +26,7 @@
     "collapsed": true
    },
    "source": [
-    "## これを状態空間モデルに落とし込もう。\n",
+    "これを状態空間モデルに落とし込もう。\n",
     "現在位置 $x$ と速度 $v$ を状態とすると状態空間方程式\n",
     "$$ \\mathbf{z}_{t+1} = A \\mathbf{z}_{t} + B u_{t} $$\n",
     "$$ \\mathbf{x}_{t} = C \\mathbf{z}_{t} $$\n",
@@ -38,7 +38,7 @@
     "  A = \\left[\n",
     "    \\begin{array}{rr}\n",
     "      1 & dt \\\\\n",
-    "      -\\frac{K}{M}dt & -\\frac{D}{M}dt +1\n",
+    "      -\\frac{K}{M}dt & -\\frac{C}{M}dt +1\n",
     "    \\end{array}\n",
     "  \\right]\n",
     "$\n",
