--- a/examples/mdk.ipynb
+++ b/examples/mdk.ipynb
@@ -17,7 +17,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![mck](images/mck.gif)"
+    "![mdk](images/mdk.gif)"
    ]
   },
   {
@@ -62,9 +62,7 @@
    "metadata": {
     "collapsed": true
    },
-   "source": [
-    "## "
-   ]
+   "source": []
   }
  ],
  "metadata": {
